--- a/Brass.html
+++ b/Brass.html
@@ -9,11 +9,11 @@
 <body>
 <div class="nav">
 <a href="index.html" class="link">Home</a>
-<a href="About Us.html" class="link">About Us</a>
-<a href="Gallery.html" class="link">Gallery</a>
+<a href="about Us.html" class="link">About Us</a>
+<a href="gallery.html" class="link">Gallery</a>
 <a href="Brass.html" class="link">Brass Products</a>
 <a href="rajasthani.html" class="link">Rajasthani Products</a>
-<a href="Wooden.html" class="link">Wooden Products</a>
+<a href="wooden.html" class="link">Wooden Products</a>
 <a href="marble.html" class="link">Marble Items
 </div>
 <h1 class="head">BRASS PRODUCTS</h1>
