--- a/about us.html
+++ b/about us.html
@@ -9,11 +9,12 @@
 <body>
 	<div class="nav">
 <a href="index.html" class="link">Home</a>
-<a href="About Us.html" class="link">About Us</a>
-<a href="Gallery.html" class="link">Gallery</a>
+<a href="about Us.html" class="link">About Us</a>
+<a href="gallery.html" class="link">Gallery</a>
 <a href="Brass.html" class="link">Brass Products</a>
 <a href="rajasthani.html" class="link">Rajasthani Products</a>
-<a href="Wooden.html" class="link">Wooden Products</a>
+<a href="wooden.html" class="link">Wooden Products</a>
+<a href="marble.html" class="link">Marble Products</a>
 </div>
 
 <h1 class="head">WHO ARE WE</h1>
