--- a/about us.html
+++ b/about us.html
@@ -14,7 +14,7 @@
 <a href="Brass.html" class="link">Brass Products</a>
 <a href="rajasthani.html" class="link">Rajasthani Products</a>
 <a href="wooden.html" class="link">Wooden Products</a>
-<a href="marble.html" class="link">Marble Products</a>
+<a href="marble.html" class="link">Marble Items</a>
 </div>
 
 <h1 class="head">WHO ARE WE</h1>
