--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="nav">
 <a href="index.html" class="link">Home</a>
-<a href="about Us.html" class="link">About Us</a>
+<a href="about us.html" class="link">About Us</a>
 <a href="gallery.html" class="link">Gallery</a>
 <a href="Brass.html" class="link">Brass Products</a>
 <a href="rajasthani.html" class="link">Rajasthani Products</a>
