--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1 class="head">WHY US</h1>
 <div class="nav">
 <a href="index.html" class="link">Home</a>
-<a href="about Us.html" class="link">About Us</a>
+<a href="about us.html" class="link">About Us</a>
 <a href="gallery.html" class="link">Gallery</a>
 <a href="Brass.html" class="link">Brass Products</a>
 <a href="rajasthani.html" class="link">Rajasthani Products</a>
