--- a/Brass.html
+++ b/Brass.html
@@ -62,7 +62,7 @@
 <div class="icon"><img src="pages/Brass Product/brass (7).jpg" class="g2"></div>
 <div class="icon"><img src="pages/Brass Product/brass (8).jpg" class="g2"></div>
 
-
+</div>
 
  
 
